--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-langchain>=0.0.267
-langchain-community>=0.0.267
-python-dotenv>=1.0.0
-pypdf>=3.15.0
-tiktoken>=0.5.1
-faiss-cpu>=1.7.4
-sentence-transformers>=2.2.2
-huggingface-hub>=0.19.0
-langchain-huggingface>=0.0.267
+langchain==0.3.21
+langchain_community==0.3.20
+langchain_core==0.3.45
+langchain_huggingface==0.1.2
+langchain_openai==0.3.9
+langgraph==0.3.15
+python-dotenv==1.0.1
+langgraph.checkpoint.sqlite==0.3.15
